Display total value if equity accounts are hidden

Show the accounts value incl. the value of sub-accounts
 - if the account is not expanded or
 - the account is a top-level account or
 - the account is an investment account and equity accounts are hidden

That last condition was not present before and caused the value of
investments to be shown incorrect in case the display of equity accounts
had been suppressed by the respective setting.

BUG: 361898